
Current git version
-------------------

  * When an application fails to focus itself (because
    focus_stealing_prevention is active), then the window is marked as urgent.
  * Fix handling of delta -1 in 'focus_monitor' and 'cycle_monitor'
  * Fixed precision decimals in the layout tree (more reliable in- and output
    of fractions in frame splits)
  * New attribute 'urgent_count' for tags, counting the number of urgent clients on a tag
  * New rule consequence 'floatplacement' that updates the placement of floating
    clients ('floatplacement=smart' for little overlap,
    'floatplacement=center' for centering) or leaves the floating position as
    is ('floatplacement=none')
  * New rule condition 'pgid'
  * The 'new_attr' command now also accepts an initial value
  * Bug fixes:
    - Fix wrong behaviour in 'cycle_layout' in the case where the current layout
      is not contained in the layout list passed to 'cycle_layout'.
    - React to a change of the 'floating_focused' attribute of the tag object

Release 0.8.3 on 2020-06-06
---------------------------

  * Bug fixes:
    - Fix race condition in focus_follows_mouse handling

Release 0.8.2 on 2020-05-04
---------------------------

  * Selection of empty frames by the mouse (by click or by hover if
    focus_follows_mouse is enabled)
  * The commands 'close_and_remove' / 'close_or_remove' act like 'close' for
    floating clients
  * The decoration window allows focusing, moving, and resizing the client
    via the mouse (as known from standard floating window managers)
  * Improved herbstclient tab completion for the fish shell
  * Bug fixes:
    - Fix a crash in the error handler when a invalid monitor name is
      passed. (Affects list_padding move_monitor rename_monitor lock_tag
      unlock_tag)
    - Fix the type of WM_STATE
    - The client attributes sizehints_tiling and sizehints_floating are now
      writable
    - Fix EWMH urgency change for clients without WM hints set