@@ -79,7 +79,6 @@ private:
     //! cycle the frames within the current tree
     void cycle_frame(std::function<size_t(size_t,size_t)> indexAndLenToIndex);
     void cycle_frame(int delta);
-    //! try to resemble a given raw frame tree given by the FrameParser
     void applyFrameTree(std::shared_ptr<Frame> target,
                         std::shared_ptr<RawFrameNode> source);
     static std::shared_ptr<TreeInterface> treeInterface(
